# projetoMatematica

./: pyproject.toml
