[tool.poetry]
name = "projetomatematica"
version = "0.1.0"
description = ""
authors = ["Arthur Oliveira <ruhtra.oliveira3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
